k8s-manifests/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  namespace: app
  labels:
    app: spring-petclinic
spec:
  replicas: 2                     
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      nodeSelector:
        role: app
      containers:
        - name: app
          image: IMAGE_PLACEHOLDER       
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
