k8s-manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: petclinic.example.com      
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-petclinic
                port:
                  number: 80
